<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <GVL Name="Automatic" Id="{7e4bdbd1-b96b-4df8-905c-fcd22461ac06}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	MotorR: Motor;
	RotationPositionAuto: INT;
	RotationPositionCurrent: INT;
	SafetyRON: BOOL;
	
	MotorL: Motor;
	LiftingPositionAuto: INT;
	LiftingPositionCurrent: INT;
	SafetyLON: BOOL;
	
	MotorE: Motor;
	ExtensionPositionAuto: INT;
	ExtensionPositionCurrent: INT;
	SafetyEON: BOOL;
	
	MotorG: Motor;
	GripPositionAuto: INT;
	GripPositionCurrent: INT;
	SafetyGON: BOOL;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>