<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <POU Name="Recipe2" Id="{cefbc20c-159f-4896-912e-87a831f8ea44}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK PUBLIC Recipe2
VAR_INPUT
	ExecutingRecipe2: BOOL;
END_VAR
VAR_OUTPUT
	SuccesfullyEnded: BOOL := FALSE;
END_VAR
VAR
	State: INT := 0;
END_VAR

// Recipe is sequence of moves to execute the task.]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF ExecutingRecipe2 THEN	// we start executing recipe2 (again)
	SuccesfullyEnded := FALSE;
END_IF

IF NOT IO.Switch AND NOT SuccesfullyEnded THEN
	// WOOD:
	IF State = 0 THEN
		IF Automatic.RotationPositionAuto < 140 THEN
			IO.MotorRotationDirection := 0;
			Automatic.MotorR.CurrentlyMoving := TRUE;
			IO.MotorRotation := 1;
		ELSE
			State := 1;
			IO.MotorRotation := 0;
			Automatic.MotorR.CurrentlyMoving := FALSE;
		END_IF
	ELSIF State = 1 THEN
		IF Automatic.LiftingPositionAuto < 200 THEN
			IO.MotorLiftingDirection := 1;
			Automatic.MotorL.CurrentlyMoving := TRUE;
			IO.MotorLifting := 1;
		ELSE
			State := 2;
			IO.MotorLifting := 0;
			Automatic.MotorL.CurrentlyMoving := FALSE;
		END_IF
	ELSIF State = 2 THEN
		IF Automatic.GripPositionAuto < 160 THEN
			IO.MotorGripDirection := 0;
			Automatic.MotorG.CurrentlyMoving := TRUE;
			IO.MotorGrip := 1;
		ELSE
			State := 3;
			IO.MotorGrip := 0;
			Automatic.MotorG.CurrentlyMoving := FALSE;
		END_IF
	ELSIF State = 3 THEN
		IF NOT IO.EndLiftingSensor THEN
			IO.MotorLiftingDirection := 0;
			Automatic.MotorG.CurrentlyMoving := TRUE;
			IO.MotorLifting := 1;
		ELSE
			State := 4;
			IO.MotorLifting := 0;
			Automatic.MotorG.CurrentlyMoving := FALSE;
		END_IF
	ELSIF State = 4 THEN
		IF NOT IO.EndRotationSensor THEN
			IO.MotorRotationDirection := 1;
			Automatic.MotorR.CurrentlyMoving := TRUE;
			IO.MotorRotation := 1;
		ELSE
			State := 5;
			IO.MotorRotation := 0;
			Automatic.MotorR.CurrentlyMoving := FALSE;
		END_IF
	ELSIF State = 5 THEN
		IF NOT IO.EndGripSensor THEN		// it places the cylinder onto the platform
			IO.MotorGripDirection := 1;
			Automatic.MotorG.CurrentlyMoving := TRUE;
			IO.MotorGrip := 1;
		ELSE
			State := 6;
			IO.MotorGrip := 0;
			Automatic.MotorG.CurrentlyMoving := FALSE;
		END_IF
	ELSIF State = 6 THEN
		SuccesfullyEnded := TRUE;
		State := 0;
		RETURN;
	END_IF
END_IF]]></ST>
    </Implementation>
    <LineIds Name="Recipe2">
      <LineId Id="20" Count="1" />
      <LineId Id="9" Count="0" />
      <LineId Id="23" Count="62" />
      <LineId Id="273" Count="4" />
      <LineId Id="22" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>